# qmlsink-multisink

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
videoitem/: videoitem.cpp
